# blog

./: Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
blogs/: models.py  serializers.py  urls.py  views.py
blogs/migrations/: 0002_tag_blog_user_blog_tags.py
config/: settings.py  urls.py
users/: views.py
